[package]
name = "calypso"
version = "0.1.0"
authors = ["Vardan <3110249@gmail.com>"]
description = "Cross-platform (Windows & Linux) library for simulating keyboard/mouse input events and registering global input device event handlers."

readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[dependencies]
once_cell = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

